# video-content-maker

./: .gitignore  README.md  app.py  pyproject.toml
src/: backgrounds.py  captions.py  cli.py  config.py  tts.py  video.py
